# LSCO_dataset_collection

./: README.md
camera_setup/libuvc-theta-lower/gst/: gst_viewer  gst_viewer.c  thetauvc.c  thetauvc.h
camera_setup/libuvc-theta-upper/gst/: gst_loopback  gst_viewer  gst_viewer.c
camera_setup/v4l2loopback/: .v4l2loopback.ko.cmd  .v4l2loopback.mod.o.cmd  .v4l2loopback.o.cmd  modules.order  v4l2loopback.ko  v4l2loopback.mod.c
camera_setup/v4l2loopback/.tmp_versions/: v4l2loopback.mod
camera_setup/v4l2loopback/utils/: v4l2loopback-ctl
ros/ouster_ros1/: README.md
ros/ouster_ros1/ouster_client/: CMakeLists.txt  package.xml
ros/ouster_ros1/ouster_client/include/ouster_client/: os1_util.h
ros/ouster_ros1/ouster_client/src/: main.cpp  os1.cpp  os1_util.cpp
ros/ouster_ros1/ouster_ros/: CMakeLists.txt
ros/ouster_ros1/ouster_ros/include/ouster_ros/: os1_ros.h
ros/ouster_ros1/ouster_ros/launch/: os1.launch
ros/ouster_ros1/ouster_ros/src/: img_node.cpp  os1_cloud_node.cpp  os1_node.cpp  os1_ros.cpp  viz_node.cpp
ros/ouster_ros1/ouster_viz/: CMakeLists.txt  package.xml
ros/ouster_ros1/ouster_viz/include/ouster_viz/: viz.h
ros/ouster_ros1/ouster_viz/src/: main.cpp  viz.cpp
ros/stereo_camera_pub/: CMakeLists.txt  README.md  package.xml
ros/stereo_camera_pub/launch/: sync.launch
ros/stereo_camera_pub/scripts/: sync.py
script/: buildKernel.sh  launchLidar.sh  lowerScript.sh  publishTopics.sh  record.sh  setupLidar.sh  upperScript.sh
